src/objects/Admission__c.object
<CustomObject>
    <fields>
        <fullName>Admission_Rep_that_Collected_Funds__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admission Rep that Collected Funds</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Admissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admissions_Rep_that_Closed_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admissions Rep that Closed Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Admissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admit_Date__c</fullName>
        <label>Admit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admit_Month__c</fullName>
        <description>Admision Month is a Date field with the first day of the month of the admission for Lightning Reporting.</description>
        <formula>DATE(YEAR(Admit_Date__c),MONTH(Admit_Date__c),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admit Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>All_Tx_claims_paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Tx claims paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_of_days_paid__c</fullName>
        <label>Amount of days paid</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auth_Notes__c</fullName>
        <label>Auth Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BB_Chart_Status__c</fullName>
        <label>BB Chart Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Behavioral_Health_ID__c</fullName>
        <formula>If (VOB__r.If_carve_out_BH_Member_ID__c =&quot;&quot;,  Member_ID__c , VOB__r.If_carve_out_BH_Member_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Behavioral Health ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Agent_Name__c</fullName>
        <label>CTM Agent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Call_ID__c</fullName>
        <label>CTM Call ID</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Campaign__c</fullName>
        <label>CTM Campaign</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Dialed_Number_Description__c</fullName>
        <label>CTM Dialed Number/Description</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Recording_URL__c</fullName>
        <label>CTM Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CTM_Source__c</fullName>
        <label>CTM Source</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Type__c</fullName>
        <label>CTM Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chart_ID__c</fullName>
        <label>Chart ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Admissions</relationshipLabel>
        <relationshipName>Admissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Phone__c</fullName>
        <label>Client Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Count_of_Incident_Reports__c</fullName>
        <label>Count of Incident Reports</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DOA_to_OB_Facility__c</fullName>
        <label>DOA to OB Facility</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Deductible_Met__c</fullName>
        <formula>VOB__r.Deductible_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Deductible Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <formula>VOB__r.Deductible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Detox_Days_Auth_d__c</fullName>
        <label>Detox Days Auth&apos;d</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discharge_Date__c</fullName>
        <label>Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discharge_Facility__c</fullName>
        <label>Discharge Facility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Discharge_Type__c</fullName>
        <label>Discharge Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed Treatment</fullName>
                </value>
                <value>
                    <fullName>Completed episode of care (substance free for at least 30 days)</fullName>
                </value>
                <value>
                    <fullName>Left Involuntarily before completing treatment</fullName>
                </value>
                <value>
                    <fullName>Referred outside of agency - episode of care completed</fullName>
                </value>
                <value>
                    <fullName>Referred outside of agency - episode of care not completed</fullName>
                </value>
                <value>
                    <fullName>Administrative discharge (initiated by the agency)</fullName>
                </value>
                <value>
                    <fullName>Non-compliant with agency&apos;s rules</fullName>
                </value>
                <value>
                    <fullName>Incarcerated</fullName>
                </value>
                <value>
                    <fullName>Agency closed with no referral</fullName>
                </value>
                <value>
                    <fullName>Left voluntarily before completing treatment (against medical, clinical or staff advice)</fullName>
                </value>
                <value>
                    <fullName>OTO patient was fighting</fullName>
                </value>
                <value>
                    <fullName>OTO patient caused police contact</fullName>
                </value>
                <value>
                    <fullName>OTO patient was marketing</fullName>
                </value>
                <value>
                    <fullName>OTO patient brought in drugs</fullName>
                </value>
                <value>
                    <fullName>OTO patient was combative with staff</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discharge_to_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Discharge to Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Admissions (Discharge to Facility)</relationshipLabel>
        <relationshipName>Admissions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Readmit_Reason__c</fullName>
        <label>Do Not Readmit Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Readmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Readmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Est_Charges__c</fullName>
        <formula>( Detox_Days_Auth_d__c * Est_Detox_Rate__c )+( Res_Days_Auth_d__c* Est_Res_Rate__c )+( Est_PHP_Rate__c * PHP_Days_Auth_d__c)+(IOP_Days_Auth_d__c * Est_IOP_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Est Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Detox_Rate__c</fullName>
        <label>Est Detox Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_IOP_Rate__c</fullName>
        <label>Est IOP Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_PHP_Rate__c</fullName>
        <label>Est PHP Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Est_Res_Rate__c</fullName>
        <label>Est Res Rate</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Haven Detox</fullName>
                </value>
                <value>
                    <fullName>TRT</fullName>
                </value>
                <value>
                    <fullName>CCR</fullName>
                </value>
                <value>
                    <fullName>ICFR</fullName>
                </value>
                <value>
                    <fullName>Lake Ave</fullName>
                </value>
                <value>
                    <fullName>Embrace</fullName>
                    <isActive>false</isActive>
                    <label>Embrace</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_if_Transfer_To__c</fullName>
        <label>Facility if Transfer To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>IF(ISPICKVAL(Client_Name__r.Client_Gender__c, &quot;male&quot;), &quot;Male&quot;, IF (ISPICKVAL(Client_Name__r.Client_Gender__c, &quot;female&quot;), &quot;Female&quot;, &quot;Not Available&quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_INN_EIV__c</fullName>
        <label>Hidden INN EIV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hidden_Insurance_Co__c</fullName>
        <label>Hidden Insurance Co</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Insurance_ID__c</fullName>
        <label>Hidden Insurance ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_OON_EIV__c</fullName>
        <label>Hidden OON EIV</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Calculator_OOP__c</fullName>
        <formula>IF (Is_deductible_included_in_OOP__c =&quot;yes&quot;,if( INN_OOP_Remaining__c =0,INN_OOP_Remaining__c,INN_OOP_Remaining__c),INN_OOP_Remaining__c+ INN_Ded_Remaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Calculator OOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_DED__c</fullName>
        <formula>VOB__r.INN_Ded__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN DED</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Ded_Met__c</fullName>
        <formula>VOB__r.INN_Ded_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Ded Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Ded_Remaining__c</fullName>
        <formula>INN_DED__c - INN_Ded_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Ded Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_EIV__c</fullName>
        <formula>if( INN_OOP__c =0,( Est_Charges__c- INN_Ded_Remaining__c )* INN_Inpt_Coinsurance__c,if((Est_Charges__c-INN_Ded_Remaining__c )*(1- INN_Inpt_Coinsurance__c)&gt; INN_Calculator_OOP__c , Est_Charges__c -INN_Calculator_OOP__c-INN_Ded_Remaining__c,( Est_Charges__c-INN_Ded_Remaining__c)* INN_Inpt_Coinsurance__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Discharge INN EIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_Inpt_Coinsurance__c</fullName>
        <formula>VOB__r.INN_Inpt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Inpt Coinsurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INN_OOP_Met__c</fullName>
        <formula>VOB__r.INN_OOP_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN OOP Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_OOP_Remaining__c</fullName>
        <formula>INN_OOP__c - INN_OOP_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN OOP Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_OOP__c</fullName>
        <formula>VOB__r.INN_OOP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN OOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_OR_OON__c</fullName>
        <formula>TEXT ( VOB__r.Is_policy_INN_or_OON__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN OR OON</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INN_Outpatient_Coinsurance__c</fullName>
        <formula>VOB__r.INN_Outpatient_Coinsurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Outpatient Coinsurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>INN_Preadmit_EIV__c</fullName>
        <formula>VOB__r.INN_EIV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Preadmit EIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INN_or_OON_Benefits_Utilized__c</fullName>
        <label>INN or OON Benefits Utilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Network</fullName>
                </value>
                <value>
                    <fullName>Out-of-Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IOP_Days_Auth_d__c</fullName>
        <label>IOP Days Auth&apos;d</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inpatient_Co_insurance__c</fullName>
        <formula>VOB__r.Inpatient_Co_insurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Inpatient Co-insurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Insurance_Notes__c</fullName>
        <formula>VOB__r.Notes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <formula>VOB__r.Primary_Insurance_Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insurance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_deductible_included_in_OOP__c</fullName>
        <formula>text (VOB__r.Is_deductible_included_in_OOP__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is deductible included in OOP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LOC__c</fullName>
        <label>LOC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Detox</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>PHP</fullName>
                </value>
                <value>
                    <fullName>IOP</fullName>
                </value>
                <value>
                    <fullName>OPT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOS__c</fullName>
        <formula>Discharge_Date__c - Admit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_Stay__c</fullName>
        <formula>Discharge_Date__c  -  Admit_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Length of Stay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MR_Number__c</fullName>
        <label>MR Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <formula>VOB__r.Member_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Multiplan__c</fullName>
        <formula>text( VOB__r.Multiplan__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Multiplan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OON_Deductible_Remaining__c</fullName>
        <formula>Deductible__c - Deductible_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Deductible Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_EIV__c</fullName>
        <formula>if( OOP__c =0,( Est_Charges__c - OON_Deductible_Remaining__c )* Inpatient_Co_insurance__c ,if((Est_Charges__c-OON_Deductible_Remaining__c )*(1-Inpatient_Co_insurance__c)&gt; (OON_OOP_Calculator__c ),Est_Charges__c-OON_OOP_Calculator__c,(Est_Charges__c-OON_Deductible_Remaining__c)*Inpatient_Co_insurance__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Discharge OON EIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_OOP_Calculator__c</fullName>
        <formula>IF( Is_deductible_included_in_OOP__c =&quot;yes&quot;,if( OON_OOP_Remaining__c =0,OON_OOP_Remaining__c,OON_OOP_Remaining__c),OON_OOP_Remaining__c+ OON_Deductible_Remaining__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON OOP Calculator</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_OOP_Remaining__c</fullName>
        <formula>OOP__c - OOP_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON OOP Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP_Met__c</fullName>
        <formula>VOB__r.OOP_Met__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON OOP Met</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OOP__c</fullName>
        <formula>VOB__r.OOP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON OOP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_CTM_CallID__c</fullName>
        <formula>IF( ISBLANK( Opportunity__c ),  Client_Phone__c ,
IF (NOT(ISBLANK( Opportunity__r.Caller_ID_Caller_Phone__c )), Opportunity__r.Caller_ID_Caller_Phone__c,
 Client_Phone__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp CTM CallID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_CTM_Campaign__c</fullName>
        <description>Pulls the CTM Source from the Admission for legacy records, and Opportunity for newer ones.</description>
        <formula>IF( ISBLANK( Opportunity__c ), CTM_Campaign__c,
IF (NOT(ISBLANK(Opportunity__r.CTM_Campaign__c)), Opportunity__r.CTM_Campaign__c,
CTM_Campaign__c))</formula>
        <label>Opp CTM Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_CTM_Source__c</fullName>
        <description>Pull from the Opportunity CTM Source first, if not set, use the Admission CTM Source.</description>
        <formula>IF( ISBLANK( Opportunity__c ), CTM_Source__c, 
  IF (NOT(ISBLANK(Opportunity__r.CTM_Source__c)), Opportunity__r.CTM_Source__c,
     CTM_Source__c))</formula>
        <inlineHelpText>Support for Legacy and Modern Admissions.</inlineHelpText>
        <label>Opp CTM Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Insurance_Company__c</fullName>
        <formula>IF(ISBLANK(Opportunity__c),   Hidden_Insurance_Co__c   ,
 Opportunity__r.Insurance_Company_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Insurance Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Lead_Source__c</fullName>
        <description>Bring parent Lead Source into Admission for Reporting</description>
        <formula>IF( ISBLANK( Opportunity__c ),
 TEXT(Patient_Source__c) ,
IF ( ISBLANK(TEXT(Opportunity__r.LeadSource)), TEXT(Patient_Source__c) ,
TEXT(Opportunity__r.LeadSource)))</formula>
        <label>Opp Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Admissions</relationshipLabel>
        <relationshipName>Admissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Lead_Date__c</fullName>
        <formula>VOB__r.Date_of_Intake__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outpatient_Coinsurance__c</fullName>
        <formula>VOB__r.Outpatient_Coinsurance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Outpatient Coinsurance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PHP_Days_Auth_d__c</fullName>
        <label>PHP Days Auth&apos;d</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Paid_Through_Date__c</fullName>
        <label>Paid Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Paid_Upon_Admission__c</fullName>
        <label>Paid Upon Admission</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <formula>VOB__r.Patient_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Most Recent Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Source__c</fullName>
        <label>Patient Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alex Torres</fullName>
                </value>
                <value>
                    <fullName>Alicia Reddy</fullName>
                </value>
                <value>
                    <fullName>Austin Thomas</fullName>
                </value>
                <value>
                    <fullName>Billy Briggs</fullName>
                </value>
                <value>
                    <fullName>Brian Cellary</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>CCR Employee</fullName>
                </value>
                <value>
                    <fullName>CCR Main</fullName>
                </value>
                <value>
                    <fullName>Chanda Lynn</fullName>
                </value>
                <value>
                    <fullName>Chris Cosgrove</fullName>
                </value>
                <value>
                    <fullName>Chuck Dehnel</fullName>
                </value>
                <value>
                    <fullName>Colin Troy</fullName>
                </value>
                <value>
                    <fullName>Danielle Heule</fullName>
                </value>
                <value>
                    <fullName>David Kimelblatt</fullName>
                </value>
                <value>
                    <fullName>Ed Ainsely</fullName>
                </value>
                <value>
                    <fullName>Erik Pavao</fullName>
                </value>
                <value>
                    <fullName>Father John</fullName>
                </value>
                <value>
                    <fullName>Gary Robinson</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>GoogleAd Words</fullName>
                </value>
                <value>
                    <fullName>Haven Employee</fullName>
                </value>
                <value>
                    <fullName>Haven Main</fullName>
                </value>
                <value>
                    <fullName>ICFR Employee</fullName>
                </value>
                <value>
                    <fullName>ICFR Main</fullName>
                </value>
                <value>
                    <fullName>Jamie Berkoben</fullName>
                </value>
                <value>
                    <fullName>Jenna Duckworth</fullName>
                </value>
                <value>
                    <fullName>Josh Craig</fullName>
                </value>
                <value>
                    <fullName>Kevin King</fullName>
                </value>
                <value>
                    <fullName>Kirill</fullName>
                </value>
                <value>
                    <fullName>Kyle McHugh</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Source__c</fullName>
        <label>Payment Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Private Pay</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Discharge_EIV__c</fullName>
        <formula>If(text(INN_or_OON_Benefits_Utilized__c)=&quot;In-network&quot;, Hidden_INN_EIV__c , Hidden_OON_EIV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Post Discharge EIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Power_of_1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preadmission_Assessment_Link__c</fullName>
        <label>Preadmission Assessment Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Preadmit_EIV__c</fullName>
        <formula>VOB__r.EIV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preadmit EIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pt_DOB__c</fullName>
        <formula>Client_Name__r.Patient_DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pt DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pt_DOB_new__c</fullName>
        <label>Pt DOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REFERRED_DISCHARGE__c</fullName>
        <formula>Referred_By__c = Discharge_to_Facility__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REFERRED-DISCHARGE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Readmit__c</fullName>
        <label>Readmit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Admissions (Referred By)</relationshipLabel>
        <relationshipName>Admissions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <label>Referred To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_to_Marketer__c</fullName>
        <label>Referred to Marketer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reimbursement_Rate_Type__c</fullName>
        <formula>VOB__r.Reimbursement_Raty_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reimbursement Rate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Res_Days_Auth_d__c</fullName>
        <label>Res Days Auth&apos;d</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revenue_Collected_to_Date__c</fullName>
        <label>Revenue Collected to Date</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status_of_OB_Referral__c</fullName>
        <label>Status of OB Referral</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>